Fix image size on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -11,6 +11,7 @@ body {
 }
 
 #logo {
+    width: 100%;
     max-width: 400px;
 }
 
